<resources>
    <string name="app_name">EcoLife</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="login_nombre">Usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_ini">Iniciar</string>
    <string name="title_activity_navegacion_menu">EcoLife</string>

    <string name="lateral_ini">Inicio</string>
    <string name="lateral_ven">Historial</string>
    <string name="lateral_usu">Gestionar usuarios</string>
    <string name="lateral_tal">Talonarios actuales</string>
    <string name="lateral_com">Compartir</string>
    <string name="lateral_option">Telf EcoLife: 75522112 </string>
    <string name="lateral_info">Imformacion</string>
    <string name="lateral_emp">Version 1.0</string>

    <string name="ini_ventacont">VENTA AL CONTADO</string>
    <string name="ini_ventacred">VENTA AL CREDITO</string>
    <string name="ini_talonario">Talonario actual</string>
    <string name="ini_talonro">Nro talonario: </string>
    <string name="ini_talofecha">Fecha creacion: </string>
    <string name="ini_talocred">Creditos actuales: </string>
    <string name="ini_nuevotalo">CREAR NUEVO TALONARIO</string>

    <string name="GestUsu_cargo">Cargo</string>
    <string name="GestUsu_titulo">LISTA DE USUARIOS</string>
    <string name="GestUsu_reg">REGISTRAR USUARIO</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="reg_nom">Nombre Completo</string>
    <string name="reg_ci">Carnet de Identidad</string>
    <string name="reg_telf">Telefono</string>
    <string name="reg_fech_nac">Fecha de nacimiento</string>
    <string name="reg_fecha"> -- / -- / ---- </string>
    <string name="reg_email">E-mail</string>
    <string name="reg_pass">Password</string>
    <string name="reg_guardar">Guardar</string>

    <string name="edit_titulo">Editar usuario</string>
    <string name="edit_email">E-mail</string>
    <string name="edit_telf">telefono</string>
    <string name="edit_cargo">Cargo del usuario</string>
    <string name="edit_estado">Estado del usuario</string>
    <string name="edit_guardar">Guardar</string>

    <string name="vc_titulo">CREDITO</string>
    <string name="vc_hf">FECHA:</string>
    <string name="vc_nombre">Nombre del cliente</string>
    <string name="vc_direccion">Dirección</string>
    <string name="vc_zona">Zona</string>
    <string name="vc_telf">Telefono</string>
    <string name="vc_prod">Producto:</string>
    <string name="vc_vendedor">Nombre del promotor</string>
    <string name="vc_confirmar">CONFIRMAR</string>
    <string name="vc_sacarfoto">CAMARA</string>

    <string name="vcont_titulo">CONTADO</string>
    <string name="vcont_agregar">AGREGAR</string>

    <string name="htvcred_atras">Volver</string>

    <string name="gutalo_expirado">Expirados</string>
    <string name="gutalo_cambiartitulo">Tranferir talonario</string>

    <string name="gutalo_estadotitulo">Cambio de estado del talonario</string>
    <string name="gutalo_estadonrotalo">Nro de talonario: </string>
    <string name="gutalo_estadofecha">Fecha: </string>
    <string name="gutalo_estadoactual">Estado actual: </string>
    <string name="gutalo_estadocambiar">Cambiar estado</string>
    <string name="gutalo_estadoinfoboton">Importante!</string>
    <string name="gutalo_estadoinfo">CASO 1: Si el talonario actual esta {Activo} y el usuario esta {Habilitado} o {Vacaciones} no podrá cambiar es estado del talonario. \n\nCASO 2: Si el talonario actual esta {Activo} y el usuario esta {Bloqueado} si podrá realizar el cambio de estado. \n\nCASO 3: Si el talonario actual esta {Pasivo} si podrá realizar el cambio de estado. \n\nCASO 4: Si el talonario actual esta {Expirado} este no cambiara su estado.</string>
    <string name="crear_taloinfo">Para crear un nuevo talonario seleccione la fecha actual correctamente.</string>

    <string name="foto_titulo">FOTO DEL DOMICILIO</string>

    <string name="nav_header_ecolife">ECOLIFE S.R.L.</string>
    <string name="nav_header_telfverde">Version 1.2</string>

    <string name="vcreditoprueba">Mateo quiere un perro</string>


</resources>
