<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/almacen"
            android:title="@string/lateral_ini" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/talonarios"
            android:title="@string/lateral_ven" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="?android:attr/actionModePasteDrawable"
            android:title="@string/lateral_tal" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/obrero"
            android:title="@string/lateral_usu" />
    </group>

    <item android:title="@string/lateral_emp">
        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_view"
                android:title="@string/lateral_info" />
        </menu>
    </item>

</menu>
