<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reg_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:visibility="visible"
    tools:context=".RegUser"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/reg_nom"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="63dp" />
        <EditText
            android:id="@+id/editCI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/reg_ci"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="63dp" />

        <EditText
            android:id="@+id/editTelf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/reg_telf"
            android:inputType="textPersonName|phone"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="63dp" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/reg_fech_nac"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.143" />

        <EditText
            android:id="@+id/editDate"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/reg_fecha"
            android:inputType="date" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:hint="@string/reg_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/reg_pass"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp" />
        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/btnregistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_launcher_background"
            android:text="@string/reg_guardar"
            android:textSize="32dp"
            android:textColor="@color/colorBlanco" />
    </LinearLayout>

</RelativeLayout>