<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    tools:context=".NavegacionMenu"
    android:background="@drawable/fondo_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_navegacion_menu">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/vcont_Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableRight="@drawable/monedas"
                android:onClick="ventCont"
                android:text="@string/ini_ventacont"
                android:textColor="@color/colorBlanco"
                android:textSize="24sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"
                android:id="@+id/linea_ini_uno"
                >
            </View>

            <Button
                android:id="@+id/vcred_Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableRight="@drawable/contrato"
                android:onClick="ventCred"
                android:text="@string/ini_ventacred"
                android:textColor="@color/colorBlanco"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"
                android:id="@+id/linea_ini_dos"
                >
            </View>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ini_talonario"
                android:textColor="@color/colorBlanco"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ini_talonro"
                android:textColor="@color/colorBlanco" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ini_talocred"
                android:textColor="@color/colorBlanco" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ini_talofecha"
                android:textColor="@color/colorBlanco" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"
                android:id="@+id/linea_ini_tres"
                >
            </View>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/carpetas"
                android:text="@string/ini_nuevotalo"
                android:textColor="@color/colorBlanco"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>